# astromenace

./: .gitignore  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODING_STANDARDS.md  ChangeLog.txt  CodeBlocks.cbp  LICENSE.md  License.txt  README.md  ReadMe.txt
.github/: ISSUE_TEMPLATE.md
AstroMenaceSource/: Defines.h  Game.h  Loading.cpp  Loop_audio.cpp  Loop_proc.cpp  Main.cpp  MainFS2VFS.cpp  Struct.h  config.h
AstroMenaceSource/BackGround/: SkyBox.cpp
AstroMenaceSource/CODEBLOCKS_LINUX/: sdlapp.cbp  sdlapp.depend  sdlapp.layout
AstroMenaceSource/CODEBLOCKS_WIN/: sdlapp.cbp  sdlapp.depend  sdlapp.layout
AstroMenaceSource/Camera/: GameCamera.cpp
AstroMenaceSource/Core/: Base.h  Core.h
AstroMenaceSource/Game/: Game.cpp  Game_Camera.cpp  Game_Mission.cpp  Game_Options.cpp  Game_PlayerShip.cpp  Game_WeaponSlot.cpp
AstroMenaceSource/GraphicFX/: ShadowMap.cpp  SkyBox.cpp  StarSystem.cpp
AstroMenaceSource/Menu/: Button.cpp  Dialog.cpp  Font.cpp  Font3D.cpp  Menu.cpp  Menu_ConfControl.cpp  Menu_Credits.cpp  Menu_Demo.cpp  Menu_Difficulty.cpp  Menu_Information.cpp  Menu_Interface.cpp  Menu_Mission.cpp  Menu_Options.cpp  Menu_OptionsAdv.cpp  Menu_Profile.cpp  Menu_TopScores.cpp  Menu_Workshop.cpp  Menu_Workshop_Shipyard.cpp  Menu_Workshop_Weaponry.cpp  Menu_Workshop_Workshop.cpp
AstroMenaceSource/Object3D/: AI.cpp  Object3D.cpp  Object3D.h  Object3DCollision.cpp  Object3DCollisionMath.cpp  Object3DFunctions.cpp  Object3DManager.cpp
AstroMenaceSource/ScriptEngine/: Script.cpp  Script.h  ScriptFunction.cpp  Setup.cpp  Text.cpp
AstroMenaceSourceCode/: CMakeLists.txt  License.txt
AstroMenaceSourceCode/AstroMenaceSource/: Defines.h  Main.cpp  Struct.h
AstroMenaceSourceCode/FS2VFS/: VFSCreator.vcproj  _VFSCreator.aps  _VFSCreator.rc  haff.cpp  main.cpp  vfs_var.cpp  vfs_var.h
AstroMenaceSourceCode/GLSL/: light.vert  light21.frag  light_explosion.vert
FS2VFS/: VFS.cpp  VFSCreator.sln  haff.cpp  main.cpp  main_createVFS.cpp  resource.h  rle.cpp  vfs_var.cpp  vfs_var.h
GLSL/: light14.frag  light15.frag  light16.frag  light26.frag  particle.frag  particle.vert
RAW_VFS_DATA/: cursor.tga  cursor_shadow.tga  text.csv
RAW_VFS_DATA/CREDITS/: codeblocks.tga  freetype.tga  gimp.tga  gnugcc.tga  svn.tga  tinyxml.tga
RAW_VFS_DATA/FONT/: LiberationFontLicense.txt  font_white.tga
RAW_VFS_DATA/GAME/: ammo.tga  game_num.tga  game_panel.tga  weapon_panel_left.tga
RAW_VFS_DATA/GFX/: flare2.tga  flare3.tga  trail1.tga  trail2.tga  trail3.tga  trail4.tga  trail5.tga
RAW_VFS_DATA/GLSL/: light.frag  light.vert  light10.frag  light11.frag  light12.frag  light13.frag  light14.frag  light15.frag  light16.frag  light20.frag  light21.frag  light22.frag  light23.frag  light24.frag  light25.frag  light26.frag  light_explosion.frag  light_explosion.vert  light_shadowmap.frag  light_shadowmap.vert  light_track.vert  light_turret.vert  particle.frag  particle.vert  particle_stars.vert
RAW_VFS_DATA/LOADING/: loading03.tga  loading04.tga
RAW_VFS_DATA/MENU/: arrow_list_up.tga  arrows_off.tga  arrows_on.tga  astromenace.tga  back_spot2.tga  blackpoint.tga  button256_in.tga  button256_off.tga  button_dialog128_out.tga  button_dialog200_in.tga  button_dialog200_off.tga  checkbox_in.tga  checkbox_main.tga  dialog768_600.tga  panel444_333_back.tga  panel800_444_back.tga  perc.tga  system_engine4.tga  system_mechan4.tga  system_onoff.tga  system_power1.tga  system_power2.tga  system_protect1.tga  system_protect3.tga  system_target2.tga  system_target3.tga  weapon10_icon.tga  weapon11_icon.tga  weapon12_icon.tga  weapon13_icon.tga  weapon18_icon.tga  weapon19_icon.tga  weapon1_icon.tga  weapon4_icon.tga  weapon7_icon.tga  workshop_panel1.tga  workshop_panel4.tga
RAW_VFS_DATA/MODELS/: ReadMe.txt  gr-01.VW2D  gr-01.tga  gr-02.VW2D  gr-02.tga  gr-03.VW2D  gr-03.tga  gr-04.VW2D  gr-04.tga  gr-05.VW2D  gr-05.tga  gr-06.VW2D  gr-06.tga  gr-07.VW2D  gr-07.tga  track.VW2D  track.tga
RAW_VFS_DATA/SCRIPT/: aimode.xml  list.xml  menu1.xml  menu2.xml  menu3.xml  mission1.xml  mission10.xml  mission10_icon.tga  mission11.xml  mission12.xml  mission12_icon.tga  mission13.xml  mission13_icon.tga  mission14.xml  mission15.xml  mission2.xml  mission2_icon.tga  mission3.xml  mission4.xml  mission5.xml  mission5_icon.tga  mission6.xml  mission7.xml  mission7_icon.tga  mission8.xml  mission9.xml
RAW_VFS_DATA/SKYBOX/: tile_14.VW2D  tile_14.tga  tile_23.VW2D  tile_23.tga  tile_back.tga
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md
gamedata/credits/: clang.tga  freetype.tga  gentoo.tga  git.tga  oggvorbis.tga  openal.tga  opengl.tga  qtcreator.tga  sdl.tga
gamedata/game/: energy.tga  game_panel2.tga  game_panel_el.tga  nums.tga  weapon_ammo.tga  weapon_energy.tga  weapon_panel_right.tga
gamedata/gfx/: flare.tga  flare1.tga  trail2.tga  trail5.tga
gamedata/glsl/: light.frag  light.vert  light_explosion.frag  light_explosion.vert  light_shadowmap.frag  light_shadowmap.vert  particle.frag  particle.vert
gamedata/lang/: text.csv
gamedata/loading/: loading01.tga  loading02.tga  loading_back.tga  loading_line.tga  viewizardlogo.tga
gamedata/menu/: ammo.tga  arrow_list_down.tga  arrows_blue.tga  back_spot.tga  button256_back.tga  button256_out.tga  button384_back.tga  button384_in.tga  button384_out.tga  button_dialog128_in.tga  button_dialog128_off.tga  button_dialog200_out.tga  dialog512_256.tga  dialog512_512.tga  line.tga  panel444_333_border.tga  perc_none.tga  system_empty.tga  system_engine1.tga  system_engine2.tga  system_engine3.tga  system_mechan1.tga  system_mechan2.tga  system_mechan3.tga  system_power3.tga  system_power4.tga  system_protect2.tga  system_protect4.tga  system_target1.tga  system_target4.tga  weapon14_icon.tga  weapon15_icon.tga  weapon16_icon.tga  weapon17_icon.tga  weapon2_icon.tga  (+13 more)
licenses/: CC-BY-SA-4.0.txt
share/: astromenace.appdata.xml  astromenace.desktop
src/: build_config.h  command.cpp  command.h  config.h  enum.h  fs2vfs.cpp  fs2vfs.h  game.h  loading.cpp  loop_audio.cpp  loop_proc.cpp  main.cpp  main.h  struct.h
(+951 files in other folders)
